Bug 62921 - [llvmpipe] piglit arb_color_buffer_float-drawpixels GL_RGBA16F regression
Summary: [llvmpipe] piglit arb_color_buffer_float-drawpixels GL_RGBA16F regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-03-30 03:24 UTC by Vinson Lee
Modified: 2013-04-02 11:22 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-03-30 03:24:26 UTC
mesa: c34bbe110d1e562b1594a9a4f2e83a2ab5630036 (master)

$ ./bin/arb_color_buffer_float-drawpixels GL_RGBA16F -auto
Testing 16-bit floating-point FBO
glDrawPixels of fbo with fragment clamp TRUE  (expecting clamping)
glDrawPixels of fbo with fragment clamp FIXED (expecting no clamping)
Probe at (0,1)
  Expected: 0.500000 1.125000 -156.000000 390.000000
  Observed: 0.500000 1.125000 156.000000 390.000000
glDrawPixels of fbo with fragment clamp FALSE (expecting no clamping)
Probe at (0,1)
  Expected: 0.500000 1.125000 -156.000000 390.000000
  Observed: 0.500000 1.125000 156.000000 390.000000
PIGLIT: {'result': 'fail' }

5f41e08cf39d585d600aa506cdcd2f5380c60ddd is the first bad commit
commit 5f41e08cf39d585d600aa506cdcd2f5380c60ddd
Author: Roland Scheidegger <sroland@vmware.com>
Date:   Fri Mar 29 06:16:33 2013 +0100

    gallivm: consolidate some half-to-float and r11g11b10-to-float code
    
    Similar enough that we can try to use shared code.
    v2: fix a stupid bug using wrong variable causing mayhem with Inf and NaNs.
    
    Reviewed-by: Jose Fonseca <jfonseca@vmware.com

:040000 040000 85566eda1c3e30501aae05cd18e00a048eb185f8 896c63688122bfc9031bce85a0f806817d491559 M	src
bisect run success
Comment 1 Roland Scheidegger 2013-04-02 11:22:02 UTC
Fixed by 9b329f4c095a6b0aa5e55519c32fcf4c9d823e2b.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.